# FoxCraft

./: README.md
Android/: build.gradle
Android/src/main/: AndroidManifest.xml
Android/src/main/assets/: Function.json  README.md  cache
Android/src/main/assets/content/: WatermarkFloatWindow
Android/src/main/cpp/: CMakeLists.txt  dex_validate.cpp  native-lib.cpp  native-lib.h  rc4_decrypt.cpp
Android/src/main/res/drawable/: application_settings.xml  bookmark_multiple.xml  cog.xml  cube_scan.xml  data_node_structure.xml  earth.xml  homepage.xml  ic_about.xml  ic_chevron_right.xml  ic_help.xml  ic_logout.xml  ic_shape_polygon_plus.xml  ic_toast_error.xml  ic_toast_success.xml  ic_toast_warning.xml  ic_update.xml  icon_bg.xml  icon_bg_2.xml  island_background.xml  keyboard_settings.xml  knife_military.xml  leaf.xml  leaf_off.xml  login.xml  menu_down.xml  menu_left.xml  toy_brick.xml  window_restore.xml
Android/src/main/res/layout/: activity_help.xml  activity_main.xml  activity_setting.xml  activity_toga.xml  dynamic_island_layout.xml  feature_display_overlay.xml  feature_item.xml  floating_feature_list.xml  floating_fight.xml  floating_fog.xml  floating_keyboard.xml  floating_render.xml  floating_shortcutkey.xml  floating_watermark.xml  floating_world.xml  floating_xfc.xml  fragment_home.xml  fragment_settings.xml  item_notification.xml  item_plugin_list.xml  layout_i_install_manage.xml  layout_plugin_manage_intent.xml  new_main.xml  service_window.xml  service_window_function_list_item.xml  (+5 more)
FoxPlugin/: FP开发者文档.md  drop-actions.plugin.json  readme.md
(+68 files in other folders)
